[package]
name = "helius-laserstream-bandwidth"
version = "0.0.1"
edition = "2021"
authors = ["Helius <support@helius.xyz>"]
description = "Rust bandwidth test for Helius LaserStream gRPC"
license = "MIT"
repository = "https://github.com/helius-labs/laserstream"
keywords = ["solana", "laserstream", "yellowstone", "grpc", "blockchain"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yellowstone-grpc-proto = "4.0.0"
yellowstone-grpc-client = "4.0.0"
tonic = { version = "0.12.1", features = ["transport", "tls"] }
prost = "0.13.5"
prost-types = "0.13.5"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync"] }
tokio-stream = "0.1"
bs58 = "0.5"
thiserror = "1.0"
futures-util = { version = "0.3", features = ["sink"] }
futures-channel = "0.3"
futures = "0.3"
async-stream = "0.3"
rand = "0.8"
url = "2.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde_json = "1.0"
uuid = { version = "1.7.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde", "clock"] }
reqwest = { version = "0.11", features = ["json", "gzip", "rustls-tls"] }
sha2 = "0.10"
clap = { version = "4.5", features = ["derive"] }
solana-sdk = "2.0.0"
solana-client = "2.0.0"
helius-laserstream = "0.0.3"